--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "angular-datatables": "^11.1.1",
     "bootstrap": "^4.6.0",
+    "datatables.net": "^1.10.20",
+    "datatables.net-dt": "^1.10.20",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "moment": "^2.29.1",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
@@ -34,7 +38,9 @@
     "@angular-devkit/build-angular": "~0.1100.7",
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.3.33",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
